# sap-migration-toolkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GAP_REPORT_cutover.md  README.md  SECURITY.md  exodia.example.yaml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: concepts.md  cutover.md  getting-started.md  index.md  tenant-copy-coverage.md  tenant-copy-flow.mmd  tenant-copy.md
examples/: tenant-copy.yaml
src/exodia/: cli.py
src/exodia/core/: __init__.py  base.py  compare.py  config.py  context.py  evidence.py  gate_report.py  menu.py  monitor.py  report.py  runner.py  shell.py  snapshot.py
src/exodia/core/checks/: free_space.py
src/exodia/knowledge/errors/: hana_errors.yaml  pipo_errors.yaml  swpm_errors.yaml  tenant_copy_errors.yaml
src/exodia/modules/abap/post_activities/: __init__.py  actions.py
src/exodia/modules/abap/post_copy/: __init__.py  _jobs.py  actions.py  installation_consistency.py
src/exodia/modules/abap/profiles/: __init__.py  backup.py
src/exodia/modules/abap/ramp_down/: actions.py
src/exodia/modules/abap/readiness/: background_jobs.py  client_settings.py  lock_entries.py  profile_capture.py  rfc_destinations.py  runbook_pre_migration.py  transport_requests.py
src/exodia/modules/backup_restore/: __init__.py
src/exodia/modules/backup_restore/actions/: __init__.py  restore_database.py  swpm_system_copy.py
src/exodia/modules/backup_restore/checks/: __init__.py  _common.py  backup_availability.py  capacity.py  configuration.py  connectivity.py  minichecks.py  security.py
src/exodia/modules/backup_restore/db_drivers/: __init__.py  ase.py  base.py  (+1 more)
src/exodia/modules/pipo/: __init__.py
src/exodia/modules/tenant_copy/: __init__.py
src/exodia/tui/: app.py  exodia.tcss
tests/: test_abap_readiness.py  test_config.py  test_core.py  test_db_drivers.py  test_evidence.py  test_hana_checks.py  test_hsr_actions.py  test_menu.py  test_monitor.py  test_new_methods.py  test_pipo_actions.py  test_pipo_checks.py  test_post_activities.py  test_post_copy_cross_cutting.py  test_profile_backup.py  test_ramp_down_actions.py  test_reattach.py  test_report.py  test_restore_action.py  test_security.py  test_snapshot_compare.py  test_swpm.py  test_tenant_copy_action.py  test_tenant_copy_checks.py  test_tenant_copy_cop_additions.py  test_tui.py
(+50 files in other folders)
