[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exodia"
version = "0.1.0"
description = "Stateless executor for SAP migration operations — checks & actions for HANA/ASE backup-restore, tenant copy, HSR, and Java PI/PO system copy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tiago Madeira", email = "tiago.filipe.madeira@gmail.com" }]
keywords = ["sap", "hana", "migration", "basis", "automation", "swpm", "pipo", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "paramiko>=3.4",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
tui = ["textual>=0.60"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10", "types-paramiko", "types-pyyaml", "bandit>=1.7", "pip-audit>=2.7"]

[project.scripts]
exodia = "exodia.cli:app"

[project.urls]
Homepage = "https://github.com/iamtiagomadeira/exodia"
Repository = "https://github.com/iamtiagomadeira/exodia"
Documentation = "https://github.com/iamtiagomadeira/exodia#readme"
Issues = "https://github.com/iamtiagomadeira/exodia/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/exodia"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "UP042"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=exodia --cov-report=term-missing --cov-fail-under=78"

[tool.coverage.run]
source = ["src/exodia"]
branch = true

[tool.coverage.report]
# Honest gate: measured coverage is ~81%; the fail-under floor (78%) sits a few
# points below to absorb minor churn without breaking the build on noise.
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
